# cs231n

./: .gitignore  README.md  pyproject.toml
1/: knn.ipynb  svm.ipynb
1/cs231n/: layers.py
1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_svm.py
2/: ConvolutionalNetworks.ipynb  Dropout.ipynb
2/cs231n/: im2col_cython.c  layers.py
2/cs231n/classifiers/: cnn.py  fc_net.py
3/: Generative_Adversarial_Networks.ipynb  LSTM_Captioning.ipynb  RNN_Captioning.ipynb  Self_Supervised_Learning.ipynb  Transformer_Captioning.ipynb
3/cs231n/: gan_pytorch.py  rnn_layers.py  transformer_layers.py
3/cs231n/classifiers/: rnn.py  transformer.py
3/cs231n/simclr/: contrastive_loss.py  data_utils.py  utils.py
src/cs231n/: __init__.py
src/cs231n/1/: features.ipynb  softmax.ipynb
src/cs231n/1/cs231n/classifiers/: linear_classifier.py  softmax.py
src/cs231n/2/: BatchNormalization.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb  requirements.txt
src/cs231n/2/cs231n/: optim.py
