[project]
name = "cs231n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.0",
    "imageio>=2.35.1",
    "matplotlib>=3.9.2",
    "future>=1.0.0",
    "scipy>=1.14.1",
    "setuptools>=74.0.0",
    "cython>=3.0.11",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
